March 2022 7.9
  - Tree view: support multiple roots (e.g. add "cn=config")
  - Docker: upgrade OS to Debian Bullseye
  - LAM Pro:
   -> Support multiple TO addresses for license expiration email
   -> Custom scripts: $INFO.debug$ wildcard prints all possible wildcards and their values
   -> Custom scripts: extra INFO wildcards for password change options
   -> Configuration import: allow to select self service profiles to import (168)
  - Fixed bugs:
   -> Tree view: check session expiration

28.12.2021 7.8
  - Restyling of LAM
  - Allow to override global password policy in server profile (160)
  - Do not print random password if sent via email (165)
  - LAM Pro:
   -> PowerDNS support
   -> Device: allow multiple cn values
  - Fixed bugs:
   -> PDF does not contain all group members (249)
   -> File upload issue on PHP 8 (153)
   -> Export issue on non-Pro version (155)
   -> Force password change for 389ds does not work on password quick change page (251)


30.09.2021 7.7
  - 2-factor authentication with OpenID
  - Send proper response code on failed login
  - LAM Pro:
   -> OpenLDAP 2FA support for TOTP
  ->Fixed bugs:
   -> Issues with list filter if only one result is found (241)
   -> Allow to sync empty list of groups in group of names user module (242)
   -> Windows lockout duration and password maximum age computed incorrectly
   -> Wrong status for nsAccountLock (245)


05.07.2021 7.6
  - Allow to store whole LAM configuration in MySQL database
  - Docker: new options for configuration location and LAM Pro license
  - Full PHP 8 compatibility
  - Replaced tree view and moved it to tools menu
  - Wildcards in edit screen support lower-case mode (e.g. "$_firstname")
  - Windows: more fields can be hidden
  - LAM Pro:
   -> Export/Import of cron jobs
   -> Mail server encryption type can be configured (TLS/SSL/none)
   -> User self registration: support to define uid field to use constant or custom validation