@@ -42,6 +42,9 @@
 	--lam-background-color-danger-hover: #a40e26;
 	--lam-text-color-danger-hover: #ffffff;
 
+	--lam-text-color-error:  #a40e26;
+	--lam-text-color-ok: #237d0c;
+
 	--lam-table-background-color-bright: #fbfbfb;
 	--lam-table-background-color-dark: #e8f3ff;
 	--lam-table-background-color-hover: #3daee9;
@@ -442,6 +445,14 @@ table.collapse {
 
 .text-center {
 	text-align: center;
+}
+
+.text-error {
+	color: var(--lam-text-color-error);
+}
+
+.text-ok {
+	color: var(--lam-text-color-ok);
 }
 
 .div-center {
